Add env:c3_debug to debug ESP through built-in JTAG interface. (also change PC uart pins)

--- a/Master_Board_FW/concentrator_breadboard_demo/platformio.ini
+++ b/Master_Board_FW/concentrator_breadboard_demo/platformio.ini
@@ -13,3 +13,19 @@ platform = espressif32
 board = esp32-c3-devkitc-02
 framework = espidf
 upload_port = COM3
+
+[env:c3_debug]
+platform = espressif32
+board = esp32-c3-devkitc-02
+framework = espidf
+
+debug_tool = custom
+debug_port = localhost:3333
+debug_server =
+    ${platformio.packages_dir}/tool-openocd-esp32/bin/openocd
+    -f
+    ${platformio.packages_dir}/tool-openocd-esp32/share/openocd/scripts/board/esp32c3-builtin.cfg
+build_type = debug
+monitor_speed = 115200
+debug_init_break = tbreak loop
+upload_port = COM22
