--- a/Sensor_Boards_FW/sensor_board_BME280/platformio.ini
+++ b/Sensor_Boards_FW/sensor_board_BME280/platformio.ini
@@ -8,7 +8,26 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-c3-devkitc-02]
+[env:board_BME280]
 platform = espressif32
 board = esp32-c3-devkitc-02
 framework = espidf
+board_build.partitions = partitions.csv
+upload_port = COM20
+
+[env:board_BME280_debug]
+platform = espressif32
+board = esp32-c3-devkitc-02
+framework = espidf
+board_build.partitions = partitions.csv
+
+debug_tool = custom
+debug_port = localhost:3333
+debug_server =
+    ${platformio.packages_dir}/tool-openocd-esp32/bin/openocd
+    -f
+    ${platformio.packages_dir}/tool-openocd-esp32/share/openocd/scripts/board/esp32c3-builtin.cfg
+build_type = debug
+monitor_speed = 115200
+debug_init_break = tbreak loop
+upload_port = COM20
