--- a/Master_Board_FW/concentrator_breadboard_demo/platformio.ini
+++ b/Master_Board_FW/concentrator_breadboard_demo/platformio.ini
@@ -12,12 +12,14 @@
 platform = espressif32
 board = esp32-c3-devkitc-02
 framework = espidf
+board_build.partitions = partitions.csv
 upload_port = COM3
 
 [env:c3_debug]
 platform = espressif32
 board = esp32-c3-devkitc-02
 framework = espidf
+board_build.partitions = partitions.csv
 
 debug_tool = custom
 debug_port = localhost:3333
