Pack BLE mesh server functionality into 'server_include' and 'server_src' folders. Specific sensor server nodes should be build on top of it.

--- a/Sensor_Boards_FW/sensor_board_BME280/.vscode/settings.json
+++ b/Sensor_Boards_FW/sensor_board_BME280/.vscode/settings.json
@@ -3,6 +3,10 @@
         "esp_ble_mesh_common_api.h": "c",
         "esp_ble_mesh_defs.h": "c",
         "nbiot_ble_mesh_node_bme280.h": "c",
-        "typeinfo": "c"
+        "typeinfo": "c",
+        "nvs_flash.h": "c",
+        "ble_mesh_init.h": "c",
+        "esp_ble_mesh_sensor_model_api.h": "c",
+        "nbiot_ble_mesh_common.h": "c"
     }
 }
